Questore/Questore/wwwroot/assets/styles/app.css
/* ... */
:root {
    --main-color-yellow: #F0D266;
    --main-color-green: #8FCE5D;
    --main-color-blue: #49C8D9;
    --main-color-purple: #845DD6;
    --main-color-red: #E86868;
    --main-color-pink: #D65DBB;
}

body {
    color: #838383;
    background-color: #fafafa;
    font-family: Ubuntu;
}

.container {
    max-width: 1140px;
    margin: auto;
}

p {
    color: #838383;
    margin: 0px;
    font-size: 14px;
    font-weight: lighter;
}

h2 {
    padding: 0px;
    margin: 0px;
    display: inline;
    font-weight: normal;
    font-size: 24px;
}

/* LOGIN CLASSES */

.button {
    padding: 8px 30px;
    color: white;
    border: 1px solid;
    border-radius: 15px;
    font: 400 13.3333px Arial;
}

.button:hover {
    cursor: pointer;
}

.input-style {
    padding: 5px 10px;
    width: 92%;
    margin: 5px 0px 10px;
    border: 1px solid #bdbdbd;
    border-radius: 5px;
}

.label-style {
    margin: 3px 0;
}

.center-content {
    display: flex;
    align-items: center;
    justify-content: center;
}

.login-box {
    height: 100%;
    display: flex;
    align-items: center;
    justify-content: center;
}

.big-margin-top {
    margin-top: 50px;
}

.margin-on-bot {
    margin-bottom: 20px;
}

.margin-on-top {
    margin-top: 12px;
}

.login-box-inside {
    display: inline;
    padding: 30px 40px;
}

.rainbow {
    text-align: center;
    text-decoration: underline;
    letter-spacing: 5px;
    margin: auto;
    display: inline;
} 

.move-down {
    margin-top: 25%;
}


.big {
    font-size: 50px;
}

.rainbow_text_animated {
    background: linear-gradient(to right, #F0D266, #8FCE5D, #49C8D9, #845DD6, #D65DBB, #E86868);
    -webkit-background-clip: text;
    background-clip: text;
    color: transparent;
    animation: rainbow_animation 6s ease-in-out infinite;
    background-size: 400% 100%;
}

@keyframes rainbow_animation {
    0%,100% {
        background-position: 0 0;
    }

    50% {
        background-position: 100% 0;
    }
}

/* RAINBOW BORDER */

.gradient-border {
    --borderWidth: 1px;
    background: white;
    position: relative;
    border-radius: 5px;
}

    .gradient-border:after {
        content: '';
        position: absolute;
        top: calc(-1 * var(--borderWidth));
        left: calc(-1 * var(--borderWidth));
        height: calc(100% + var(--borderWidth) * 2);
        width: calc(100% + var(--borderWidth) * 2);
        background: linear-gradient(60deg, #F0D266, #8FCE5D, #49C8D9, #845DD6, #D65DBB, #E86868);
        border-radius: 5px;
        z-index: -1;
        animation: animatedgradient 6s ease alternate infinite;
        background-size: 300% 300%;
    }


@keyframes animatedgradient {
    0% {
        background-position: 0% 50%;
    }

    50% {
        background-position: 100% 50%;
    }

    100% {
        background-position: 0% 50%;
    }
}

/* DEFAULT MARGINS AND FLOATS */
    .small-margin-left {
        margin-left: 10px;
    }

.right {
    float: right;
}

.left {
    float: left;
}

.center-text {
    text-align: center;
}

.no-margin {
    margin: 0px;
}

/* FONTS COLORS */


.font-blue {
    color: var(--main-color-blue);
    border-color: var(--main-color-blue);
}

.font-yellow {
    color: var(--main-color-yellow);
    border-color: var(--main-color-yellow);
}

.font-red {
    color: var(--main-color-red);
    border-color: var(--main-color-red);
}

.font-purple {
    color: var(--main-color-purple);
    border-color: var(--main-color-purple);
}

.font-green {
    color: var(--main-color-green);
    border-color: var(--main-color-green);
}

.font-pink {
    color: var(--main-color-pink);
    border-color: var(--main-color-pink);
}



/****** QUESTS AND ARTIFACTS CONTAINERS ******/

.artifact-container {
    display: flex;
    align-content: space-around;
    flex-wrap: wrap;
    justify-content: center;
    line-height: 1.4;
}

.view {
    display: inline-block;
    background-color: #FAFAFA;
    width: 100%;
    padding: 5px;
}

.elements-list {
    padding: 20px 0px;
    text-align: center;
}

/****** QUESTS AND ARTIFACTS STYLING ******/


.half {
    max-width: 50%;
}


.tiny {
    padding: 2px 5px;
    color: white;
    border-radius: 10px;
    border: 1px solid;
    margin-top: 5px;
}

.green-btn {
    background-color: var(--main-color-green);
    border-color: var(--main-color-green);
}

    .green-btn:hover {
        background-color: rgb(94, 158, 42);
        border-color: rgb(94, 158, 42);
    }

.yellow-btn {
    background-color: var(--main-color-yellow);
    border-color: var(--main-color-yellow);
}

    .yellow-btn:hover {
        background-color: rgb(206, 167, 26);
        border-color: rgb(206, 167, 26);
    }


.artifact {
    background-color: white;
    box-shadow: 0px 2px 7px rgba(0, 0, 0, 0.25);
    padding: 20px;
    margin: 20px 10px 10px 10px;
    width: 316px;
    border-radius: 5px;
    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
}

.artifact-img {
    width: 158px;
    height: auto;
    float: left;
}

/****** PROFILE STYLING ******/

.top-details-container {
    display: flex;
    height: 150px;
}

.container-shadow {
    box-shadow: 0 2px 10px #BDBDBD;
    border-radius: 5px;
}

.upper-margin {
    margin-top: 20px;
}

.top-details-inner-container {
    width: 25%;
    display: flex;
    flex-direction: column;
    justify-content: space-evenly;
}


    /*AVATAR*/
    .top-details-inner-container:first-child {
        width: 15%;
        min-width: 110px;
    }

.avatar-image-container {
    position: relative;
    width: 100px;
    height: 100px;
    margin: auto;
    z-index: -1;
}

.student-avatar {
    width: 100px;
    height: 100px;
}

/*.mentor-avatar {
    background: url("../../../../../avatars/avatar.png") no-repeat;
    background-size: 99px 99px;
}

.admin-avatar {
    background: url("../../../../../avatars/avatar2.png") no-repeat;
    background-size: 99px 99px;
}*/
/* ... */

